--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/swagger": "^9.5.1",
+    "@fastify/swagger-ui": "^5.2.3",
     "dotenv": "^17.2.1",
     "fastify": "^5.4.0"
   }
