--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/main.ts",
-    "build": "tsc",
-    "start": "node -r tsconfig-paths/register dist/main.js"
+    "build": "tsc && tsc-alias",
+    "start": "node -r tsconfig-paths/register --require=./tsconfig.json dist/main.js"
   },
   "keywords": [],
   "author": "",
@@ -20,13 +20,17 @@
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "ts-node-dev": "^2.0.0",
-    "tsconfig-paths": "^4.2.0",
+    "tsc-alias": "^1.8.16",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "@types/pg": "^8.15.4",
     "dotenv": "^17.2.1",
-    "fastify": "^5.4.0"
+    "fastify": "^5.4.0",
+    "pg": "^8.16.3",
+    "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.25"
   }
 }
