--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/dotenv": "^8.2.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
@@ -27,9 +29,12 @@
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@types/pg": "^8.15.4",
+    "bcrypt": "^6.0.0",
     "dotenv": "^17.2.1",
     "fastify": "^5.4.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.25"
   }
