Foi adicionada a estrutura das entidades de pedido, produto e upload utilizando TypeORM, junto com seus respectivos repositórios e controllers. Também foram criadas as rotas para manipulação de pedidos e uploads, além de atualizado o relacionamento da entidade de usuário para incluir os pedidos. Um utilitário para leitura e processamento de arquivos enviados foi implementado, assim como schemas de validação para as requisições. Por fim, a documentação Swagger foi atualizada para refletir os novos endpoints

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,8 +25,11 @@
       "@infra": ["infrastructure/index.ts"],
       "@types": ["utils/types/index.ts"],
       "@config/*": ["utils/shared/config/*"],
-      "@schemas": ["utils/shared/schemas/index.ts"]
-    }
+      "@schemas": ["utils/shared/schemas/index.ts"],
+      "@parsers/*": ["utils/shared/parsers/*"],
+      "types": ["utils/types/index.ts"]
+    },
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "include": ["src/**/*.ts"]
 }
