--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
-    "@types/dotenv": "^8.2.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.1.0",
     "eslint": "^9.32.0",
@@ -26,6 +25,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@fastify/multipart": "^9.0.3",
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
     "@types/pg": "^8.15.4",
@@ -34,6 +34,7 @@
     "fastify": "^5.4.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.3",
+    "pino-pretty": "^13.0.0",
     "reflect-metadata": "^0.2.2",
     "tsconfig-paths": "^4.2.0",
     "typeorm": "^0.3.25"
