--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ DB_USERNAME=
 DB_PASSWORD=
 DB_NAME=
 JWT_SECRET=secret_key
+
+# Upload limits
+UPLOAD_FILE_SIZE_LIMIT=5242880  # 5MB em bytes
+UPLOAD_MAX_FILES=10
+UPLOAD_FIELD_SIZE=100
