Adicionar testes para os casos de uso de autenticação e processamento de pedidos

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 PORT=
-NODE_ENV="development"
+NODE_ENV="development" # or "production" or "test"
 DB_HOST=db
 DB_PORT=5432
 DB_USERNAME=
@@ -11,3 +11,6 @@ JWT_SECRET=secret_key
 UPLOAD_FILE_SIZE_LIMIT=5242880  # 5MB em bytes
 UPLOAD_MAX_FILES=10
 UPLOAD_FIELD_SIZE=100
+
+#Test configuration
+TEST_TYPE=unit  # or integration
